UF-4929: Created skeleton

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #========================================
 # General settings
 #========================================
-spring.application.name=template
+spring.application.name=api-eventlog
 
 # Logging
 logging.level.root=INFO
@@ -10,3 +10,16 @@ logging.level.root=INFO
 openapi.name=${spring.application.name}
 openapi.title=${spring.application.name}
 openapi.version=@project.version@
+
+#========================================
+# Datasource settings
+#========================================
+# HikariCP
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.pool-name=eventlog-pool
+# DDL script generation
+spring.jpa.properties.javax.persistence.schema-generation.database.action=none
+# Drivers, dialect, etc.
+spring.jpa.database-platform=org.hibernate.dialect.MariaDB106Dialect
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.flyway.enabled=false
