--- a/src/main/resources/application-junit.properties
+++ b/src/main/resources/application-junit.properties
@@ -1,3 +1,14 @@
 #========================================
 # Test profile settings (junit tests)
 #========================================
+
+#========================================
+# Datasource settings
+#========================================
+spring.jpa.properties.javax.persistence.schema-generation.database.action=validate
+spring.flyway.enabled=true
+
+# Driver
+spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
+# URL to database test container
+spring.datasource.url=jdbc:tc:mariadb:10.6.4:///
