--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,4 +22,5 @@ spring.jpa.properties.javax.persistence.schema-generation.database.action=none
 # Drivers, dialect, etc.
 spring.jpa.database-platform=org.hibernate.dialect.MariaDB106Dialect
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+# Flyway
 spring.flyway.enabled=false
