--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>se.sundsvall.dept44</groupId>
 		<artifactId>dept44-service-parent</artifactId>
-		<version>1.35</version>
+		<version>2.0.2</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>se.sundsvall</groupId>
@@ -19,7 +19,7 @@
 		<published.container.port.production>9730</published.container.port.production>
 		<!-- Service properties -->
 		<testcontainers.version>1.18.0</testcontainers.version>
-		<spring-filter.version>2.1.5</spring-filter.version>
+		<spring-filter.version>3.0.7</spring-filter.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -49,8 +49,8 @@
 			<artifactId>flyway-mysql</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.turkraft</groupId>
-			<artifactId>spring-filter</artifactId>
+			<groupId>com.turkraft.springfilter</groupId>
+			<artifactId>jpa</artifactId>
 			<version>${spring-filter.version}</version>
 		</dependency>
 		
