--- a/src/main/resources/application-it.properties
+++ b/src/main/resources/application-it.properties
@@ -5,7 +5,7 @@
 #========================================
 # Datasource settings
 #========================================
-spring.jpa.properties.javax.persistence.schema-generation.database.action=validate
+spring.jpa.properties.jakarta.persistence.schema-generation.database.action=validate
 # Driver
 spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
 # URL to database test container
