--- a/src/main/resources/application-junit.yml
+++ b/src/main/resources/application-junit.yml
@@ -3,6 +3,7 @@ spring:
     driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
     url: jdbc:tc:mariadb:10.6.4:///
   jpa:
+    show-sql: true
     properties:
       hibernate:
         format_sql: true
