--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -3,6 +3,10 @@ name: "Call Build and Push Image"
 on:
   workflow_dispatch:
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   shared-workflows:
     uses: Sundsvallskommun/.github/.github/workflows/build-and-push.yml@main
